@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.springframework.core.convert.support;
 
 import java.time.Duration;
@@ -22,7 +23,6 @@ import java.util.concurrent.CompletableFuture;
 
 import io.reactivex.Flowable;
 import io.reactivex.Maybe;
-import org.junit.Before;
 import org.junit.Test;
 import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
@@ -50,13 +50,7 @@ import static org.junit.Assert.assertTrue;
 @SuppressWarnings("unchecked")
 public class ReactiveAdapterRegistryTests {
 
-	private ReactiveAdapterRegistry registry;
-
-
-	@Before
-	public void setUp() throws Exception {
-		this.registry = new ReactiveAdapterRegistry();
-	}
+	private final ReactiveAdapterRegistry registry = ReactiveAdapterRegistry.getSharedInstance();
 
 
 	@Test
@@ -120,7 +114,7 @@ public class ReactiveAdapterRegistryTests {
 		Publisher<Integer> source = Flowable.fromArray(1, 2, 3);
 		Object target = getAdapter(Mono.class).fromPublisher(source);
 		assertTrue(target instanceof Mono);
-		assertEquals(new Integer(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
+		assertEquals(Integer.valueOf(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
 	}
 
 	@Test
@@ -128,7 +122,7 @@ public class ReactiveAdapterRegistryTests {
 		Publisher<Integer> source = Flowable.fromArray(1, 2, 3);
 		Object target = getAdapter(CompletableFuture.class).fromPublisher(source);
 		assertTrue(target instanceof CompletableFuture);
-		assertEquals(new Integer(1), ((CompletableFuture<Integer>) target).get());
+		assertEquals(Integer.valueOf(1), ((CompletableFuture<Integer>) target).get());
 	}
 
 	@Test
@@ -137,7 +131,7 @@ public class ReactiveAdapterRegistryTests {
 		Publisher<Integer> source = Flowable.fromIterable(sequence);
 		Object target = getAdapter(rx.Observable.class).fromPublisher(source);
 		assertTrue(target instanceof rx.Observable);
-		assertEquals(sequence, ((rx.Observable) target).toList().toBlocking().first());
+		assertEquals(sequence, ((rx.Observable<?>) target).toList().toBlocking().first());
 	}
 
 	@Test
@@ -145,7 +139,7 @@ public class ReactiveAdapterRegistryTests {
 		Publisher<Integer> source = Flowable.fromArray(1);
 		Object target = getAdapter(rx.Single.class).fromPublisher(source);
 		assertTrue(target instanceof rx.Single);
-		assertEquals(new Integer(1), ((rx.Single<Integer>) target).toBlocking().value());
+		assertEquals(Integer.valueOf(1), ((rx.Single<Integer>) target).toBlocking().value());
 	}
 
 	@Test
@@ -162,7 +156,7 @@ public class ReactiveAdapterRegistryTests {
 		Publisher<Integer> source = Flux.fromIterable(sequence);
 		Object target = getAdapter(io.reactivex.Flowable.class).fromPublisher(source);
 		assertTrue(target instanceof io.reactivex.Flowable);
-		assertEquals(sequence, ((io.reactivex.Flowable) target).toList().blockingGet());
+		assertEquals(sequence, ((io.reactivex.Flowable<?>) target).toList().blockingGet());
 	}
 
 	@Test
@@ -171,7 +165,7 @@ public class ReactiveAdapterRegistryTests {
 		Publisher<Integer> source = Flowable.fromIterable(sequence);
 		Object target = getAdapter(io.reactivex.Observable.class).fromPublisher(source);
 		assertTrue(target instanceof io.reactivex.Observable);
-		assertEquals(sequence, ((io.reactivex.Observable) target).toList().blockingGet());
+		assertEquals(sequence, ((io.reactivex.Observable<?>) target).toList().blockingGet());
 	}
 
 	@Test
@@ -179,7 +173,7 @@ public class ReactiveAdapterRegistryTests {
 		Publisher<Integer> source = Flowable.fromArray(1);
 		Object target = getAdapter(io.reactivex.Single.class).fromPublisher(source);
 		assertTrue(target instanceof io.reactivex.Single);
-		assertEquals(new Integer(1), ((io.reactivex.Single<Integer>) target).blockingGet());
+		assertEquals(Integer.valueOf(1), ((io.reactivex.Single<Integer>) target).blockingGet());
 	}
 
 	@Test
@@ -204,7 +198,7 @@ public class ReactiveAdapterRegistryTests {
 		Object source = rx.Single.just(1);
 		Object target = getAdapter(rx.Single.class).toPublisher(source);
 		assertTrue("Expected Mono Publisher: " + target.getClass().getName(), target instanceof Mono);
-		assertEquals(new Integer(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
+		assertEquals(Integer.valueOf(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
 	}
 
 	@Test
@@ -238,7 +232,7 @@ public class ReactiveAdapterRegistryTests {
 		Object source = io.reactivex.Single.just(1);
 		Object target = getAdapter(io.reactivex.Single.class).toPublisher(source);
 		assertTrue("Expected Mono Publisher: " + target.getClass().getName(), target instanceof Mono);
-		assertEquals(new Integer(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
+		assertEquals(Integer.valueOf(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
 	}
 
 	@Test
@@ -251,11 +245,11 @@ public class ReactiveAdapterRegistryTests {
 
 	@Test
 	public void CompletableFutureToPublisher() throws Exception {
-		CompletableFuture<Integer> future = new CompletableFuture();
+		CompletableFuture<Integer> future = new CompletableFuture<>();
 		future.complete(1);
 		Object target = getAdapter(CompletableFuture.class).toPublisher(future);
 		assertTrue("Expected Mono Publisher: " + target.getClass().getName(), target instanceof Mono);
-		assertEquals(new Integer(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
+		assertEquals(Integer.valueOf(1), ((Mono<Integer>) target).block(Duration.ofMillis(1000)));
 	}
 
 
